// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`issue-19986.md - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
tabWidth: 4
                                                      printWidth: 80 (default) |
=====================================input======================================
1. Enable images:

    \`\`\`json
    {}
    \`\`\`

    <p align="center">
      <img alt="example">
    </p>

2. Continue.

=====================================output=====================================
1. Enable images:

    \`\`\`json
    {}
    \`\`\`

    <p align="center">
      <img alt="example">
    </p>

2. Continue.

================================================================================
`;

exports[`issue-19986.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
1. Enable images:

    \`\`\`json
    {}
    \`\`\`

    <p align="center">
      <img alt="example">
    </p>

2. Continue.

=====================================output=====================================
1. Enable images:

   \`\`\`json
   {}
   \`\`\`

    <p align="center">
      <img alt="example">
    </p>

2. Continue.

================================================================================
`;

exports[`issue-19986.md format 2`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
1. Enable images:

    \`\`\`json
    {}
    \`\`\`

    <p align="center">
      <img alt="example">
    </p>

2. Continue.

=====================================output=====================================
1. Enable images:

   \`\`\`json
   {}
   \`\`\`

    <p align="center">
      <img alt="example">
    </p>

2. Continue.

================================================================================
`;

exports[`issue-19986-uneven-indent.md - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
tabWidth: 4
                                                      printWidth: 80 (default) |
=====================================input======================================
1. Enable images:

        <p align="center">
      <img alt="example">
    </p>

=====================================output=====================================
1. Enable images:

        <p align="center">

      <img alt="example">
    </p>

================================================================================
`;

exports[`issue-19986-uneven-indent.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
1. Enable images:

        <p align="center">
      <img alt="example">
    </p>

=====================================output=====================================
1. Enable images:

        <p align="center">

      <img alt="example">
    </p>

================================================================================
`;

exports[`issue-19986-uneven-indent.md format 2`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
1. Enable images:

        <p align="center">
      <img alt="example">
    </p>

=====================================output=====================================
1. Enable images:

        <p align="center">

      <img alt="example">
    </p>

================================================================================
`;
